<resources>
    <string name="app_name">PCB Lab</string>
    <string name="credit">
        Developer :\n\t
        Atahar Mansur Talukder Dip\n\t
        Android apps developer\n\t
        CSE honours\n\t
        National University of Bangladesh\n\t
        email: ataharmansur@gmail.com
    </string>
    <string name="command1">আমরা কোন বিষয় শিখব..</string>

    <string-array name="physics_experiments">

        <item>পরীক্ষণ ১ঃ- একটি আয়তাকার বস্তুর একটি পৃষ্ঠের ক্ষেত্রফল ও বস্তুর আয়তন নির্ণয়</item>
        <item>পরীক্ষণ ২ঃ- একটি বৃত্তাকার প্রস্থচ্ছেদবিশিষ্ট তারের প্রস্থচ্ছেদের ক্ষেত্রফল নির্ণয়</item>
        <item>পরীক্ষণ ৩ঃ- একটি ঢালু তক্তার উপরে মার্বেল গড়িয়ে পড়তে দিয়ে গড় দ্রুতি নির্ণয়</item>
        <item>পরীক্ষণ ৪ঃ- নানাবিধ কার্যক্রমের মাধ্যমে বিভিন্ন প্রকার গতির মডেল প্রদর্শন</item>
        <item>পরীক্ষণ ৫ঃ- ১০০ মিটার দৌরে শিক্ষার্থীর দ্রুতি নির্ণয় এবং লেখচিত্রে তা বিশ্লেষণ</item>
        <item>পরীক্ষণ ৬ঃ- কোন বস্তুর ওপর প্রযুক্ত বল পরিমাপ</item>
        <item>পরীক্ষণ ৭ঃ- সিঁড়ি দিয়ে দৌড়ে উঠে শিক্ষার্থীর ক্ষমতা নির্ণয়</item>
        <item>পরীক্ষণ ৮ঃ- বরফের গলনাঙ্ক নির্ণয়</item>
        <item>পরীক্ষণ ৯ঃ- পানির স্ফুটনাঙ্ক নির্ণয়</item>
        <item>পরীক্ষণ ১০ঃ- অবতল দর্পণ ব্যাবহার করে প্রতিবিম্ব সৃষ্টি ও প্রদর্শন</item>
        <item>পরীক্ষণ ১১ঃ- উত্তল দর্পণ ব্যাবহার করে প্রতিবিম্ব সৃষ্টি ও প্রদর্শন</item>
        <item>পরীক্ষণ ১২ঃ- বিভিন্ন ব্যক্তির চোখের স্পষ্ট দর্শনের ন্যূনতম দূরত্ব নির্ণয় এবং ব্যাবহারযোগ্য চশমা সনাক্তকরণ</item>
        <item>পরীক্ষণ ১৩ঃ- ঘর্ষণ ও আবেশ প্রক্রিয়ায় আধান সৃষ্টি</item>
        <item>পরীক্ষণ ১৪ঃ- বাসাবাড়ির উপযোগী তড়িৎ বর্তনী নকশা প্রণয়ন এবং ব্যাবহার প্রদর্শন</item>

    </string-array>

    <string-array name="chemestry_experiments">

        <item>পরীক্ষণ ১ঃ- বিভিন্ন তাপমাত্রায় কঠিন ও তরল পদার্থ কণার ব্যাপন হার পরীক্ষা</item>
        <item>পরীক্ষণ ২ঃ- ঊর্ধ্বপাতন প্রক্রিয়ার মাধ্যমে মিশ্রণ থেকে ২টি উপাদানকে পৃথকীকরণ</item>
        <item>পরীক্ষণ ৩ঃ- ধাতব কার্বনেট যৌগের সাথে লঘু এসিড বিক্রিয়ায় উৎপন্ন গ্যাস শনাক্ত</item>
        <item>পরীক্ষণ ৪ঃ- বর্তনী গঠন করে আয়নিক যৌগের দ্রবণের বিদ্যুৎ পরিবাহিতা পরীক্ষা</item>
        <item>পরীক্ষণ ৫ঃ- সোডিয়াম ক্লোরাইড/ফেরাস সালফেট লবণের কেলাস গঠন</item>
        <item>পরীক্ষণ ৬ঃ- দ্রাব্যতা ও বিদ্যুৎ পরিবাহিতা পরিক্ষার মাধ্যমে আয়নিক ও সমযোজী যৌগ শনাক্ত</item>
        <item>পরীক্ষণ ৭ঃ- নির্দিষ্ট ঘনমাত্রায় মোলার দ্রবণ প্রস্তুতি</item>
        <item>পরীক্ষণ ৮ঃ- তুঁতের মধ্যে কেলাস পানির উপস্থিতির ও তার পরিমাণ প্রমাণ</item>
        <item>পরীক্ষণ ৯ঃ- কার্বনেট লবণের সাথে পানি ও এসিড মিশ্রিত করে বিক্রিয়ার হার পরীক্ষা</item>
        <item>পরীক্ষণ ১০ঃ- বিকার, ড্রপার, পিপেট, পরিমাপক সিলিন্ডার, লিটমাস পেপার/ঐ পেপার ব্যাবহার করে ট্রাইট্রেশনের মাধ্যমে নির্দিষ্ট আয়তনের এসিড/ক্ষার প্রশমনে প্রয়োজনীয় ক্ষার/এসিডের আয়তন নির্ণয়</item>
        <item>পরীক্ষণ ১১ঃ- গ্যালভানিক কোষ গঠন করে বিদ্যুৎ উৎপাদন</item>
        <item>পরীক্ষণ ১২ঃ- ২টি জানা লবণের দ্রবণে সোডিয়াম হাইড্রক্সাইড যোগ করে পরিবর্তন পর্যবেক্ষণ</item>
        <item>পরীক্ষণ ১৩ঃ- লিটমাস পেপার ও pH পেপার ব্যাবহার করে সরবরাহকৃত খাদ্য থেকে অম্লীয় ও ক্ষারীয় খাদ্যের তালিকা প্রণয়ন</item>
        <item>পরীক্ষণ ১৪ঃ- অ্যামোনিয়াম লবণের সাথে ক্ষারের বিক্রিয়ার পরিবর্তন পর্যবেক্ষণ</item>
        <item>পরীক্ষণ ১৫ঃ- প্রয়োজনীয় উপাদান ব্যাবহার করে সাবান প্রস্তুতি</item>

    </string-array>

    <string-array name="biology_experiments">

        <item>পরীক্ষণ ১ঃ- অণুবীক্ষণ যন্ত্রের সাহায্যে উদ্ভিদ কোষ (পেঁয়াজ কোষ) পর্যবেক্ষণ</item>
        <item>পরীক্ষণ ২ঃ- অণুবীক্ষণ যন্ত্রের সাহায্যে প্রাণী কোষ (অ্যামিবা) পর্যবেক্ষণ</item>
        <item>পরীক্ষণ ৩ঃ- সালোকসংশ্লেষণ প্রক্রিয়ায় ক্লোরোফিল ও আলোর অপরিহার্যতার পরীক্ষা</item>
        <item>পরীক্ষণ ৪ঃ- শ্বসন প্রক্রিয়ায় তাপ নির্গমন পরীক্ষা</item>
        <item>পরীক্ষণ ৫ঃ- উদ্ভিদের অভিস্রবণ পরীক্ষা</item>
        <item>পরীক্ষণ ৬ঃ- উদ্ভিদের রস উত্তোলন পরীক্ষা</item>
        <item>পরীক্ষণ ৭ঃ- উদ্ভিদের প্রস্বেদন পরীক্ষা</item>
        <item>পরীক্ষণ ৮ঃ- বিশ্রাম এবং শরীরচর্চার পর রক্তচাপ ও পালস রেটের তুলনা (৩য় জন ব্যক্তির)</item>
        <item>পরীক্ষণ ৯ঃ- নিঃশাসে নির্গত গ্যাসের প্রকৃতি নির্ণয়</item>
        <item>পরীক্ষণ ১০ঃ- আলো অন্ধকারাচ্ছন্ন স্থানে রক্ষিত উদ্ভিত চলন পর্যবেক্ষণ</item>
        <item>পরীক্ষণ ১১ঃ- অঙ্কুরিত ছোলা বীজের সাহায্যে মূলের ভূ-অভিমুখী চলন পরীক্ষা</item>
        <item>পরীক্ষণ ১২ঃ- ফুলের গর্ভাশয়ের প্রস্থচ্ছেদ পর্যবেক্ষণ</item>
        <item>পরীক্ষণ ১৩ঃ- সাদৃশ্য ও বৈসাদৃশ্যমূলক বিশিষ্ট চিহ্নিতকরণ(২জন ব্যক্তির সাথে তাদের পিতামাতার)</item>

    </string-array>

    <string-array name="experiment_no">

        <item>পরীক্ষণ ১ঃ- </item>
        <item>পরীক্ষণ ২ঃ- </item>
        <item>পরীক্ষণ ৩ঃ- </item>
        <item>পরীক্ষণ ৪ঃ- </item>
        <item>পরীক্ষণ ৫ঃ- </item>
        <item>পরীক্ষণ ৬ঃ- </item>
        <item>পরীক্ষণ ৭ঃ- </item>
        <item>পরীক্ষণ ৮ঃ- </item>
        <item>পরীক্ষণ ৯ঃ- </item>
        <item>পরীক্ষণ ১০ঃ- </item>
        <item>পরীক্ষণ ১১ঃ- </item>
        <item>পরীক্ষণ ১২ঃ- </item>
        <item>পরীক্ষণ ১৩ঃ- </item>
        <item>পরীক্ষণ ১৪ঃ- </item>
        <item>পরীক্ষণ ১৫ঃ- </item>

    </string-array>

    <string name="intro_all">আমরা এই Experiment-এ যা শিখব:</string>
    <string name="items_name">এই Experiment-এর জন্য প্রয়োজনীয় উপকরণ</string>
    <string name="chem_name">এই Experiment-এর জন্য প্রয়োজনীয় রাসায়নিক উপকরণ</string>
    <string name="impo_law">এই Experiment-এর জন্য প্রয়োজনীয় সূত্র</string>
    <string name="tips">যে বিষয়গুলোয় মনোযোগ দিতে হবেঃ</string>

    <string name="forward01">এগুনো যাক >></string>
    <string name="forward02">চলো শুরু করি</string>
    <string name="back">এই Experiment-টি\n\t এখানেই সমাপ্ত</string>

    <string name="intro_phy01">\n
        -> স্লাইড ক্যালিপার্সের ব্যাবহার\n
        -> ভার্নিয়ার ধ্রুবক নির্ণয়\n
        -> আয়তাকার বস্তুর দৈর্ঘ্য, প্রস্থ ও উচ্চতা পরিমাণ করে তার আয়তন নির্ণয়
    </string>

    <string name="intro_phy02">\n
        -> স্ক্রু-গজের ব্যাবহার\n
        -> লঘিষ্ঠ গণন নির্ণয়\n
        -> তারের ব্যাস নির্ণয় করে তারের বৃত্তাকার পাশের ক্ষেত্রফল নির্ণয়
    </string>

    <string name="law_phy01">\n
        ঘনবস্তুর আয়তন = দৈর্ঘ্য X প্রস্থ X উচ্চতা\n\n
        স্লাইড ক্যালিপার্সের সাহায্যে যেকোনো দৈর্ঘ্য নির্ণয় সূত্র\n\n
        দৈর্ঘ্য = প্রধান স্কেল পাঠ + ভার্নিয়ার সমপাতন X ভার্নিয়ার ধ্রুবক
    </string>

    <string name="law_phy02">\n
        তারের বৃত্তাকার পাশের ক্ষেত্রফল = ৩.১৪১৬ X ব্যাসার্ধ X ব্যাসার্ধ\n\n
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t = ০.৭৮৫৪ X ব্যাস X ব্যাস\n\n
        স্ক্রু-গজের সাহায্যে যেকোনো দৈর্ঘ্য নির্ণয় সূত্র\n\n
        দৈর্ঘ্য = রৈখিক স্কেল পাঠ + বৃত্তাকার স্কেলের ভাগ সংখ্যা X লঘিষ্ঠ গণন
    </string>

    <string name="awr_phy01">\n
        -> যন্ত্রের ভার্নিয়ার ধ্রুবক সতর্কতার সাথে নির্ণয় করতে হবে\n
        -> যন্ত্রের চোয়াল ২টি বস্তুর গায়ে আলতোভাবে স্পর্শ করাতে হবে
    </string>

    <string name="awr_phy02">\n
        -> যন্ত্রের লঘিষ্ঠ গণন সতর্কতার সাথে নির্ণয় করতে হবে\n
        -> যন্ত্রের চোয়াল ২টি তারের গায়ে আলতোভাবে স্পর্শ করাতে হবে
    </string>

    <string name="phy01_cmd01">\nশুরুতে স্লাইড ক্যালিপার্সটি নেই</string>
    <string name="phy01_cmd02">\nএখন ভার্নিয়ার ধ্রুবক নির্ণয় করতে হবে</string>
    <string name="phy01_cmd03">\nভার্নিয়ার স্কেলটি মুল স্কেল থেকে পৃথক করি</string>
    <string name="phy01_cmd04">ঘনবস্তুটির দৈর্ঘ্য বরাবর\n ১ম চোয়ালে বসাই</string>
    <string name="phy01_cmd05">\n২য় চোয়ালটি বস্তুর সাথে লাগিয়ে মাপ নেই</string>
    <string name="phy01_cmd06">\nভার্নিয়ার স্কেলটি সরিয়ে বস্তুটি সরিয়ে নেই</string>
    <string name="phy01_cmd07">ঘনবস্তুটির নিচের চিহ্নটি চেপে বস্তুটির\n দিক পরিবর্তন করি</string>
    <string name="phy01_cmd08">এখন ঘনবস্তুটির প্রস্থ বরাবর\n ১ম চোয়ালে বসাই</string>
    <string name="phy01_cmd09">\n২য় চোয়ালটি বস্তুর সাথে লাগিয়ে মাপ নেই</string>
    <string name="phy01_cmd10">\nভার্নিয়ার স্কেলটি সরিয়ে বস্তুটি সরিয়ে নেই</string>
    <string name="phy01_cmd12">ঘনবস্তুটির নিচের চিহ্নটি চেপে বস্তুটির\n দিক পরিবর্তন করি</string>
    <string name="phy01_cmd13">এখন ঘনবস্তুটির উচ্চতা বরাবর\n ১ম চোয়ালে বসাই</string>
    <string name="phy01_cmd14">\n২য় চোয়ালটি বস্তুর সাথে লাগিয়ে মাপ নেই</string>
    <string name="phy01_cmd15">\nচূড়ান্ত ফলাফল নির্ণয় করি</string>

    <string name="phy02_cmd01">\nশুরুতে স্ক্রু-গজটি নেই</string>
    <string name="phy02_cmd02">\nপ্রথমে স্ক্রু-গজটির পিচ নির্ণয় করতে হবে</string>
    <string name="phy02_cmd03">\nএখন লঘিষ্ঠ গণন নির্ণয় করি</string>
    <string name="phy02_cmd04">\nনির্দিষ্ট তীর চিহ্নে ক্লিক করে স্ক্র-গজের থিম্বলটি \nঘুরিয়ে স্ক্রুটি এনভিল থেকে দূরে নেই</string>
    <string name="phy02_cmd05">\nতারটি প্রস্থচ্ছেদ বরাবর এনভিল এর সামনে ধরি</string>
    <string name="phy02_cmd06">এখন নির্দিষ্ট তীর চিহ্নে ক্লিক করে স্ক্র-গজের \nথিম্বলটি ঘুরিয়ে স্ক্রুটি এনভিলে রাখা তারে আলত \nকরে স্পর্শ করাই</string>
    <string name="phy02_cmd07">\nরৈখিক স্কেল ও বৃত্তাকার স্কেলের মাপ নেই</string>
    <string name="phy02_cmd08">\nচূড়ান্ত ফলাফল নির্ণয় করি</string>

    <string name="verniar">ভার্নিয়ার ধ্রুবক\n\t\t\t\tনির্ণয়</string>
    <string name="minimum_calculation">লঘিষ্ঠ গণন\n\t\tনির্ণয়</string>
    <string name="pich">পিচ নির্ণয়</string>
    <string name="final_result">চূড়ান্ত ফলাফল\n\t\t\t\tনির্ণয়</string>
    <string name="take_value">মাপ নেই</string>

    <string name="intro_che01">\n
        -> কঠিন ও তরল পদার্থ কণার ব্যাপন সম্পর্কে জানবো\n
        -> পরীক্ষাগারে ত্রিপদী ও বার্নার সাহায্যে তাপ উৎপন্ন করার পদ্ধতি শিখব\n
        -> নতুন একটি যৌগ KMnO4(পটাসিয়াম পারমেঙ্গানেট) সম্পর্কে জানবো
    </string>

    <string name="intro_bio01">\n
        -> যৌগিক অণুবীক্ষণ যন্ত্রের ব্যাবহার\n
        -> উদ্ভিদ কোষ সনাক্তকরণ\n
    </string>

</resources>
