<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/phy_back"
    tools:context="com.diptomanpcblab.asus.pcblab.PhyExp02P3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/impo_law"
        android:textColor="@color/physics_color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/law_phy02"
        android:textColor="@color/physics_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forPhy01P1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/forward01"
        android:textColor="@color/physics_color"
        android:textSize="27sp"
        android:textStyle="bold" />

</RelativeLayout>
