<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/phy_back"
    tools:context="com.diptomanpcblab.asus.pcblab.PhyExp02P1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:text="@string/intro_all"
        android:textColor="@color/physics_color"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:text="@string/intro_phy02"
        android:textColor="@color/physics_color"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forPhy01P1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/forward01"
        android:textColor="@color/physics_color"
        android:textSize="27sp"
        android:textStyle="bold" />

</RelativeLayout>
